fixed bottom left radius on mobile

--- a/style.css
+++ b/style.css
@@ -112,5 +112,6 @@ body {
   .third-block {
     border-bottom-right-radius: 0.5rem;
     border-top-right-radius: 0rem;
+    border-bottom-left-radius: 0.5rem;
   }
 }
